Closed Bug 429349 Opened 16 years ago Closed 16 years ago

memory leaking in nsTSMManager::UpdateComposing()

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9

People

(Reporter: masayuki, Assigned: masayuki)

Details

(Keywords: memory-leak)

Attachments

(1 file, 1 obsolete file)

Attached patch Patch v1.0 (obsolete) — Splinter Review
In nsTSMManager::UpdateComposing(), nsTSMManager caches the given composition string with |retain|. However that is only realeased at composition end, so, 2nd time or later UpdateComposing(), that may be leaking.
Flags: blocking1.9?
Attachment #316044 - Flags: review?(joshmoz)
Comment on attachment 316044 [details] [diff] [review]
Patch v1.0

  sComposingString = aComposingString;
  [sComposingString retain];

Just do:

  sComposingString = [aComposingString retain];
Attachment #316044 - Flags: review?(joshmoz) → review+
Attached patch Patch v1.1Splinter Review
thank you, josh.
Attachment #316044 - Attachment is obsolete: true
Attachment #316050 - Flags: superreview?(vladimir)
Attachment #316050 - Flags: review+
Attachment #316050 - Flags: superreview?(vladimir) → superreview+
Comment on attachment 316050 [details] [diff] [review]
Patch v1.1

simple memory leaking bug. it occurs many time. and low risk.
Attachment #316050 - Flags: approval1.9?
Comment on attachment 316050 [details] [diff] [review]
Patch v1.1

a1.9=beltzner
Attachment #316050 - Flags: approval1.9? → approval1.9+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Flags: blocking1.9?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: