Bug 429349 memory leaking in nsTSMManager::UpdateComposing() r=josh, sr=vlad, a=beltzner